improved hero styles

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Solaris universe"
+      name="Solaris Metaverse"
       content="Are you ready for event horizon?"
     />
-    <title>Solaris universe</title>
+    <title>Solaris Metaverse</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
